# spectrally-regularised-LVMs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  HISTORY.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
Examples/: README.md  axs_fixer.py  check_spectral_regularisation.ipynb  example_notebook.ipynb  tutorial_notebook.ipynb
docs/source/: acknowledgements.rst  api.rst  conf.py  getting_started.rst  guide.rst  index.rst  installation.rst  modules.rst  parameter_estimation.rst  tutorials.rst  usage.rst
notebooks/: IMS_information.md  example_1.ipynb  example_notebook.ipynb
spectrally_constrained_ICA/: __init__.py  helper_methods.py  negentropy_approximators.py
spectrally_constrained_LVMs/: __init__.py  constraint.py  cost_functions.py  helper.py  helper_methods.py  negen_approx.py  spectral_constraint.py  spectrally_constrained_LVMs.py  spectrally_constrained_linear_model.py  spectrally_constrained_model.py
spectrally_regularised_LVMs/: __init__.py  cost_functions.py  helper_methods.py  spectral_constraint.py  spectral_regulariser.py  spectrally_regularised_model.py
spectrally_regularised_lvms/: __init__.py  cost_functions.py  helper_methods.py  negen_approx.py  spectral_regulariser.py  spectrally_regularised_model.py
spectrally_regularised_lvms/.github/workflows/: pre-commit.yml
tests/: __init__.py
