[tool.poetry]
name = "spectrally-regularised-LVMs"
version = "0.1.1"
description = "An implementation of linear LVMs with a spectral regulariser."
authors = ["Ryan Balshaw <ryanbalshaw81@gmail.com>"]
maintainers = ["Ryan Balshaw <ryanbalshaw81@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/RyanBalshaw/spectrally-regularised-LVMs"
repository = "https://github.com/RyanBalshaw/spectrally-regularised-LVMs"
documentation = "https://spectrally-regularised-lvms.readthedocs.io/en/latest/"
keywords = ["Linear LVMs", "Spectral regularisation", "Python"]
include = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation",
    "Topic :: Scientific/Engineering",
]
[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
scikit-learn = "^1.1.2"
tqdm = "^4.64.1"
sympy = "^1.11.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
ruff = "^0.0.263"
jupyterlab = "^3.6.3"
interrogate = "^1.5.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-autobuild = ">=2021.0"
sphinx-rtd-theme = ">=1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug tracker" = "https://github.com/RyanBalshaw/spectrally-regularised-LVMs/issues"

[tool.poetry_bumpversion.file."./spectrally_regularised_LVMs/__init__.py"] # Uses
